Minor fix for particle velocity weirdness. Sim looks less cool but is more accurate now.

--- a/index.html
+++ b/index.html
@@ -97,8 +97,11 @@
     uniform sampler2D velocityField;
 
     float trim(float tot){
-        if(tot > 1.5){
-            return 1.5;
+        if(tot > 10.0){
+            return 10.0;
+        }
+        else if(tot < -10.0){
+            return -10.0;
         }
         else{
             return tot;
