Refactor to remove bunch of duplicate code. Now have a PingPong class. Isn't that dope.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script type="text/javascript" src="./three/OrbitControls.js"></script>
 <script type="text/javascript" src="./three/stats.min.js"></script>
 <script type="text/javascript" src="./simulate/shaderTexture.js"></script>
+<script tyep="text/javascript" src="./simulate/pingpong.js"></script>
 <script type="text/javascript" src="./simulate/simulator.js"></script>
 <script type="text/javascript" src="./texture/velocityTexture.js"></script>
 <script type="text/javascript" src="./simulate/velocitySimulator.js"></script>
