--- a/index.html
+++ b/index.html
@@ -1,79 +1,196 @@
 <!DOCTYPE html>
-<html>
+<html style="width:100%;height:100%;margin:0px;padding:0px;overflow:hidden">
+<script type="text/javascript" src="./three/three.js"></script>
+<script type="text/javascript" src="./three/OrbitControls.js"></script>
+<script type="text/javascript" src="./three/stats.min.js"></script>
+<script type="text/javascript" src="./simulate/shaderTexture.js"></script>
+<script tyep="text/javascript" src="./simulate/pingpong.js"></script>
+<script type="text/javascript" src="./simulate/simulator.js"></script>
+<script type="text/javascript" src="./texture/velocityTexture.js"></script>
+<script type="text/javascript" src="./simulate/velocitySimulator.js"></script>
+<script type="text/javascript" src="./main.js"></script>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Threeparticles : Testing out GPGPU particles with Three.js">
+<!-- pass through vertex shader -->
+<script id="passThroughVertex" type="x-shader/x-vertex">
+    void main()	{
+        gl_Position = vec4( position, 1.0 );
+    }
+</script>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<!-- pass through fragment shader -->
+<script id="passThroughFragment" type="x-shader/x-fragment">
+    uniform vec2 resolution;
+    //input texture from the previous run of this shader on the ping / pong
+    uniform sampler2D texture;
+    void main()	{
+        vec2 uv = gl_FragCoord.xy / resolution.xy;
+        vec3 color = texture2D( texture, uv ).xyz;
+        gl_FragColor = vec4( color, 1.0 );
+    }
+</script>
 
-    <title>Threeparticles</title>
-  </head>
+<script id="particleFragment" type="x-shader/x-fragment">
 
-  <body>
+    uniform vec2 resolution;
+    uniform float delta;
+    uniform float bounds;
+    //input texture from the previous run of this shader on the ping / pong
+    uniform sampler2D texture;
+    //velocity per-particle texture
+    uniform sampler2D particleVelocities;
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Brenden-Morales/ThreeParticles">View on GitHub</a>
+    //pseudo random number generation
+    float rand(vec2 co){
+        return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
+    }
 
-          <h1 id="project_title">Threeparticles</h1>
-          <h2 id="project_tagline">Testing out GPGPU particles with Three.js</h2>
+    void main()	{
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Brenden-Morales/ThreeParticles/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Brenden-Morales/ThreeParticles/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        vec2 uv = gl_FragCoord.xy / resolution.xy;
+        vec3 tmpPos = texture2D( texture, uv ).xyz;
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        //get velocity of the particle
+        vec3 velocity = texture2D(particleVelocities,uv).xyz * 0.5;
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        //reset velocity flag
+        float velocityReset = 0.0;
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        //check bounds, if we've gone out of bounds, pop back into bounds (pseudorandomly)
+        float negBounds = bounds * -1.0;
+        if(tmpPos.x > bounds){
+            tmpPos.x = (rand(vec2(tmpPos.x,tmpPos.z)) * bounds * 2.0) - bounds;
+            velocityReset = 1.0;
+        }
+        if(tmpPos.x < negBounds){
+            tmpPos.x = (rand(vec2(tmpPos.x,tmpPos.z)) * bounds * 2.0) - bounds;
+            velocityReset = 1.0;
+        }
+        if(tmpPos.z > bounds){
+            tmpPos.z = (rand(vec2(tmpPos.x,tmpPos.z)) * bounds * 2.0) - bounds;
+            velocityReset = 1.0;
+        }
+        if(tmpPos.z < negBounds){
+            tmpPos.z = (rand(vec2(tmpPos.x,tmpPos.z)) * bounds * 2.0) - bounds;
+            velocityReset = 1.0;
+        }
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+        //use the position we got from the previous texture, and the velocity we got from the velocity field
+        //to compute the new color of this pixel, which we'll use in the "particleCloud" as our position!
+        gl_FragColor = vec4(tmpPos.x + velocity.x * 0.05,tmpPos.y,tmpPos.z + velocity.z * 0.05, velocityReset );
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+    }
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+</script>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<script id="velocityFragment" type="x-shader/x-fragment">
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+    uniform vec2 resolution;
+    uniform float delta;
+    uniform float bounds;
+    uniform vec3 mouse;
+    //input texture from the previous run of this shader on the ping / pong (previous particle velocity)
+    uniform sampler2D texture;
+    //texture of particle positions
+    uniform sampler2D positionField;
+    //texture for velocity field ... velocities?
+    uniform sampler2D velocityField;
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+    float trim(float tot){
+        if(tot > 10.0){
+            return 10.0;
+        }
+        else if(tot < -10.0){
+            return -10.0;
+        }
+        else{
+            return tot;
+        }
+    }
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+    void main()	{
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+        //get the position of this particle based on the position texture
+        vec2 uv = gl_FragCoord.xy / resolution.xy;
+        vec4 tmpPos = texture2D( positionField, uv );
+        float velocityReset = tmpPos.w;
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+        //mouse distance checking
+        bool mouseBounds = false;
+        float distFromMouse = 0.0;
+        if(mouse.y != -1.0){
+            distFromMouse = distance(vec2(tmpPos.x,tmpPos.z),vec2(mouse.x,mouse.z));
+            if(distFromMouse <= 10.0){
+                mouseBounds = true;
+            }
+        }
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Threeparticles maintained by <a href="https://github.com/Brenden-Morales">Brenden-Morales</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+        //get the particles position on the grid as a decimal fraction thing
+        vec2 gridPos = vec2(((tmpPos.x + bounds) / (bounds * 2.0)), ((tmpPos.z + bounds) / (bounds * 2.0)));
 
-    
+        //get velocity field
+        vec3 cellVelocity = texture2D(velocityField,gridPos).xyz;
 
-  </body>
+        //now we look at the existing velocity for this specific particle
+        vec3 existingVelocity = texture2D( texture,uv).xyz;
+
+        //add the cell velocity to the existing velocity (for now)
+        vec3 addedVelocity = vec3(trim(existingVelocity.x + cellVelocity.x),0.0,trim(existingVelocity.z + cellVelocity.z));
+
+        //write that out to our velocity texture
+        gl_FragColor = vec4(addedVelocity,0.0 );
+        if(velocityReset > 0.0){
+            gl_FragColor = vec4(0.0,0.0,0.0,0.0);
+        }
+        if(mouseBounds){
+            vec2 partPos = vec2(tmpPos.x,tmpPos.z);
+            vec2 mousePos = vec2(mouse.x,mouse.z);
+            vec2 delta = partPos - mousePos;
+            gl_FragColor = vec4(delta.x * 10.0,0.0,delta.y * 10.0,0.0);
+        }
+
+    }
+
+</script>
+
+<script type="x-shader/x-vertex" id="cloudVertex">
+    attribute float size;
+    attribute vec2 reference;
+    attribute vec3 customColor;
+    uniform sampler2D texture;
+    varying vec3 vColor;
+    void main() {
+
+        //get coordinates for texture information
+        vec3 texInfo = texture2D( texture, reference).xyz;
+
+        vec3 modifiedPosition = vec3(texInfo.x, 0, texInfo.z);
+
+        vColor = customColor;
+        vec4 mvPosition = modelViewMatrix * vec4( modifiedPosition, 1.0 );
+        gl_PointSize = size * ( 300.0 / length( mvPosition.xyz ) );
+
+        gl_Position = projectionMatrix * mvPosition;
+    }
+</script>
+
+<script type="x-shader/x-fragment" id="cloudFragment">
+
+    uniform vec3 color;
+    varying vec3 vColor;
+
+    void main() {
+        gl_FragColor = vec4(vColor,1.0);
+    }
+
+</script>
+
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Three.js Particles</title>
+</head>
+<body style="width:100%;height:100%;margin:0px;padding:0px;overflow:hidden" onload="initialize()">
+<div style="position:absolute;right:0;top:0;color:white">
+Press space to start / stop simulation. <br> Press "e" on the grid to scatter particles.
+</div>
+</body>
 </html>
